Added references and created npneq-master.bib based on inq paper

--- a/main.tex
+++ b/main.tex
@@ -30,7 +30,7 @@
 \usepackage[dvipsnames]{xcolor}
 
 \usepackage{biblatex} %Imports biblatex package
-\addbibresource{Tadashi_Refs.bib} %Import the bibliography file
+\addbibresource{npneq-master.bib} %Import the bibliography file
 \DeclareUnicodeCharacter{0301}{\'{e}}
 
 
