--- a/research.tex
+++ b/research.tex
@@ -39,16 +39,16 @@ Note to ourselves:
 
 \section{Progress and Accomplishments to date}
 
-As outlined above, the primary strategic objective of the NPNEQ CMS center during the first 18 months of the funding period was the development of a \textbf{portable}, \textbf{extensible}, \textbf{scalable} and \textbf{reliable} DFT/RT-TDDFT framework that is fully compatible with existing petascale and near-term exascale \textbf{hybrid CPU-GPU} architectures.
+As outlined above, the primary strategic objective of the NPNEQ CMS center during the first 18 months of the funding period was the development of a \textbf{portable}, \textbf{extensible}, \textbf{scalable} and \textbf{reliable} DFT/RT-TDDFT framework that is fully compatible with existing petascale and near-term exascale~\cite{Kothe2019} \textbf{hybrid CPU-GPU} architectures.
 This objective was achieved with the recent release of \textsc{inq}~\cite{Andrade2021}. 
-In parallel however, the team also pursued multi-institutional collaborative research efforts leading to science outcomes in the area of \emph{ultrafast materials science} using alternate tools and methodologies, some of which will be incorporated into the larger INQ ecosystem of codes in the future. 
+In parallel, the team also pursued multi-institutional collaborative research efforts leading to science outcomes in the area of \emph{ultrafast materials science} using alternate tools and methodologies, some of which will be incorporated into the larger INQ ecosystem of codes in the future. 
 In the following we provide a summary of both the software development and scientific research efforts within NPNEQ.
 
 \subsection{Code Development}
 
 \subsubsection{The INQ DFT/TDDFT platform} 
 
-With the widespread adoption of Graphical Processing Units (GPUs) as a powerful and energy efficient hardware paradigm for scientific computing over the past fifteen years and with the ongoing migration of DOE's national super-computing facilities from CPU to networked hybrid CPU-GPU architectures, it is of paramount importance within computational materials science that the community has access to electronic structure codes that are fully compatible with the emerging GPU computing landscape.
+With the widespread adoption of Graphical Processing Units (GPUs) as a powerful and energy efficient~\cite{Huang2009} hardware paradigm for scientific computing over the past fifteen years and with the ongoing migration of DOE's national super-computing facilities from CPU to networked hybrid CPU-GPU architectures, it is of paramount importance within computational materials science that the community has access to electronic structure codes that are fully compatible with the emerging GPU computing landscape.
 The INQ platform~\cite{Andrade2021} under development by the NPNEQ team addresses this need within the context of Density Functional Theory (DFT) based approaches to materials simulation while further specializing to nonperturbative simulations of materials under nonequilibrum conditions.
 During the first 18 months of this funding period, the NPNEQ center accomplished the design and development tasks necessary to deliver a modular and extensible GPU-accelerated software solution for DFT/TDDFT led by LLNL PIs \textbf{Andrade} and \textbf{Correa}.
 In the following we outline the unique design features of INQ as well as it's current capabilities:
@@ -86,9 +86,9 @@ Some of the key libraries used in INQ are:
 	It also provides the interface between \textsc{inq} and vendor provided linear algebra, FFT and C++ standard libraries.
 	\item \textbf{B.MPI3:} B-MPI3 is a C++ library wrapper for version 3.1 of the Message Passing Interface (MPI) standard that simplifies the its utilization while maintaining a similar level of performance as the more cumbersome native MPI C-language interface. 
 	B.MPI3 was developed by PI \textbf{Correa} at LLNL.
-	\item \textbf{PSEUDOPOD:} \textsc{PSEUDOPOD} is a CPU+GPU compatible library that handles pseudopotential (PP) parsing, filtering and other auxiliary tasks while supporting many popular PP formats as well standardized PP sets such as Pseudodojo and SG15. 
+	\item \textbf{PSEUDOPOD:} \textsc{PSEUDOPOD} is a CPU+GPU compatible library that handles pseudopotential (PP) parsing, filtering and other auxiliary tasks while supporting many popular PP formats as well standardized PP sets such as Pseudodojo~\cite{Van2018} and SG15~\cite{Schlipf2015}. 
 	\textsc{PSEUDOPOD} developed by PI \textbf{Andrade} at LLNL, moves PP handling from the application layer to the library layer of INQ.
-	\item \textbf{LIBXC:} Libxc is a standalone library of exchange and correlation (XC) functionals initially developed by M. Marques. 
+	\item \textbf{LIBXC:} Libxc is a standalone library of exchange and correlation (XC) functionals initially developed by M. Marques~\cite{Marques2012}. 
 	As part of the development on \textsc{inq}, PI \textbf{Andrade} implemented a GPU extension of \textsc{libxc} that relies on cuda ‘unified memory’ to store its internal data structures. 
 	\textsc{INQ} therefore has the ability to evaluate XC functionals on GPUs, which is critical to maintain all data in the GPU.
 \end{itemize}
@@ -98,7 +98,7 @@ The modularization of \textsc{inq}'s library layer affords several advantages: F
 Following changes to low-level hardware-optimized libraries, only a small portion of the code needs to be updated in a way that is transparent to application layer developers. 
 Furthermore, by creating libraries and offloading tasks to them whenever possible, the codebase internal to \textsc{inq} can be kept relatively small as shown in Fig.~\ref{fig:inq_design}(b). 
 
-Finally, in order to ensure reliability within a collaborative environment, \textsc{inq} adopts a test-driven development (TDD) approach in line with modern software development best practices. 
+Finally, in order to ensure reliability within a collaborative environment, \textsc{inq} adopts a test-driven development (TDD)~\cite{Beck2002} approach in line with modern software development best practices. 
 Therefore the \textsc{inq} codebase consists of both unit and functional tests that are run regularly within an automated continuous delivery platform hosted on gitlab. This workflow ensures that only code modifications that do not lead to errors anywhere in the codebase are accepted.
 
 The result is a fully functional yet light-weight DFT/TDDFT framework that is portable across hardware platforms, offers optimal scaling on distributed hybrid CPU-GPU platforms combined with reliable numerical accuracy. 
@@ -106,7 +106,7 @@ The result is a fully functional yet light-weight DFT/TDDFT framework that is po
 In the following, we discuss performance and validation tests of these capabilities within \textsc{inq}. 
 
 \paragraph{GPU-MPI functionality and scaling:}
-1-1.5 pages including figures
+%1-1.5 pages including figures
 
 \textsc{Inq} is the first implementation of density functional theory (DFT) and time-dependent DFT (TDDFT) that is written \emph{from scratch} to work on graphical processing units (GPUs).
 It proven quite challenging to adapt an existing code to run on the GPU, as extensive modifications to the whole code are needed.
@@ -176,8 +176,8 @@ Results for ground state total energies and real-time TDDFT optical response are
 \end{figure}
 
 For a new scientific code it is fundamental to produce results that are consistent with other approaches and codes. 
-As \textsc{inq} follows a test-driven development approach, \textsc{inq}'s codebase is continuously tested and validated at multiple levels against analytical results or benchmark data obtained from other established codes such as \textsc{Quantum Espresso}. 
-We recently carried out higher level end-to-end tests of \textsc{inq} as a part of the software release validating \textsc{inq} results against corresponding quantities obtained from established plane-wave and realspace grid codes: \textsc{Quantum Espresso} (QE) and \textsc{Octopus}. 
+As \textsc{inq} follows a test-driven development approach, \textsc{inq}'s codebase is continuously tested and validated at multiple levels against analytical results or benchmark data obtained from other established codes such as \textsc{Quantum Espresso}~\cite{Giannozzi2009}. 
+We recently carried out higher level end-to-end tests of \textsc{inq} as a part of the software release validating \textsc{inq} results against corresponding quantities obtained from established plane-wave and realspace grid codes: \textsc{Quantum Espresso} (QE) and \textsc{Octopus}~\cite{Tancogne2020}. 
 For this purpose we chose observables such as molecular bond lengths and crystal lattice parameters based on total-energy minimization, as well as linear optical response from real-time propagation as the relevant quantities to be compared. 
 For details on calculation parameters please refer to Ref.~\cite{Andrade2021}. 
 As apparent from the comparisons shown in Figure~\ref{fig:inq_results}, we find that absolute total energies from \textsc{inq} are within \(0.3~\mathrm{mHartree/atom}\) of the QE reference. 
@@ -198,7 +198,7 @@ Finally, \textsc{inq} was tested against a medium-to-high energy application, na
 Despite the association with other areas of research, such as fusion and radiation damage, electronic stopping power plays an important role in the development of the theory of solids~\cite{Thomson1912, Darwin1912, Bohr1913} and the electron gas~\cite{Lindhard1964}.
 Furthermore, by interpreting the electron-phonon coupling as low velocity limit of stopping power, TDDFT offers the only scalable method to non-perturbative access to calculate electron-phonon coupling in complicated systems or at finite temperature~\cite{Caro2015}. 
 To develop this method is important to achieve reliable electronic stopping power in the regime of a tenth to a hundredth of atomic unit of velocity, in a variety of atomistic environments. 
-This is the topic the NPNEQ's publication Ref.~\cite{Quashie2020} were a record low value of ion velocity \(0.04~\mathrm{a.u.}\) is achieved in a non-adiabatic calculation and its relation with the electronic density of state at the Fermi level is established.
+This is the topic the NPNEQ's publication Ref.~\cite{Quashie2020} where a record low value of ion velocity \(0.04~\mathrm{a.u.}\) is achieved in a non-adiabatic calculation and its relation with the electronic density of state at the Fermi level is established.
 
 \subsubsection{Tight Binding model for nonequilibrium dynamics}\label{sec:tight-binding}
 
@@ -246,7 +246,7 @@ In this work, {\bf Tan} has supervised photocurrent simulations, {\bf Pemmaraju}
 Follow-up work will utilize the exact-exchange functional features of the \textsc{inq} code to explore the impact of nonlocal exchange on photocurrents in these strongly correlated systems. 
 GPU optimization of the \textsc{inq} code will be used to extend these simulations to the relevant time scales identified above.  
 
-\subsubsection{Halide perovskite work}
+\subsubsection{Effect of surface defects on carrier dynamics in lead halide perovskites}
 
 High defect tolerance has been considered as a main reason for the long charge carrier lifetime and high photoluminescence quantum yield in bulk lead halide perovskites (LHPs). 
 On the other hand, surface defects play a critical role in determining charge carrier dynamics and optical properties, especially for LHP nanocrystals and quantum dots. Revealing the nature of surface defects and developing strategy for their effective passivation are thus of strong interest. 
@@ -325,37 +325,22 @@ Our work paves the way for further exploration and ultimately directed manipulat
 \section{Future Work}
 
 \subsection{Software development}
-Having validated the modern C++ based design and infrastructural aspects of \textsc{INQ} and demonstrated parallelism over hybrid CPU-GPU architectures, during the next phase of the project we aim to add functionality to the DFT/TDDFT application layer of  \textsc{INQ} with the goal of tackling emerging ultrafast materials science problems. Additionally, to enable low cost simulations of very large system sizes accessible via tight-binding models, we plan to implement tools for automated extraction of model parameters based on real-time TDDFT simulations. This latter functionality will be developed at LBNL and interfaced with TB codes for dynamics simulations.
+Having validated the modern C++ based design and infrastructural aspects of \textsc{INQ} and demonstrated parallelism over hybrid CPU-GPU architectures, during the next phase of the project we aim to add functionality to the DFT/TDDFT application layer of  \textsc{INQ} with the goal of tackling emerging ultrafast materials science problems. Additionally, to enable low cost simulations of very large system sizes accessible via tight-binding (TB) models, we plan to implement tools for automated extraction of model parameters based on real-time TDDFT simulations. This latter functionality will be developed at LBNL and interfaced with TB codes for dynamics simulations.
 
 \subsubsection{Functionality additions to INQ}
 
-\paragraph{Beyond adiabatic semi-local XC functionals:}  Recent developments within TDDFT have enabled accurate simulations of excitonic and long-range charge transfer phenomena in condensed matter systems within the framework of generalized Kohn-Sham (GKS) TDDFT and current-DFT (CDFT).  GKS theory relaxes the requirement within KS theory that the XC potential be a local multiplicative potential of the form $V_{XC}[n](\textbf{r})$ and instead allows non-local potentials $V_{XC}[\rho](\textbf{r},\textbf{r'} )$ that are often explicit functionals of the GKS one-body density matrix $\rho(\textbf{r},\textbf{r'})$. Current-DFT  based approaches meanwhile allow for the  encoding of excitonic effects within a time-dependent XC vector potential $A_{XC}[\textbf{j},n](r,t)$, in principle, a functional of both the density $n(\textbf{r})$ and current-density~$\textbf{j}(\textbf{r})$. Both approaches are promising for  modeling excitonic effects in  functional materials such a transition metal oxides, chalcogenides and hybrid perovskite systems at a cost that is significantly lower than solving the Bethe-Salpeter Equation. GKS theory based RT-TDDFT in particular extends to nonlinear and non-perturbative light matter interactions as has been demonstrated recently in the case of pump-probe spectroscopy simulated within excitonic condensed matter systems. One of the main development goals for the NPNEQ team over the next 18 months is therefore to implement beyond semi-local DFT XC functionals within $\textsc{INQ}$.  In this endeavor we will draw on our previous experience implementing hybrid functionals within Quantum Espresso (\textbf{PI Prendergast}), SIESTA (\textbf{PI Pemmaraju}) and Octopus (\textbf{PI Andrade}) while exploring the GPU adaptation within \textsc{INQ} of promising new algorithms such as the  Adaptively Compressed Exchange (ACE) low-rank representation of the Fock operator due to Lin et al.   
-
-%Nonlocal functionals for Generalized Kohn-Sham (GKS) RT-TDDFT (Task 1.1)
-% The need for more accurate descriptions of the electron density and its polarization response to perturbations across length scales is critical for real-time explorations of ultrafast dynamics. Field-driven excitations relevant to optical transitions require accurate band gaps and excited state evolution113, 116, 118. The potential to form self-trapped excited states, through electron-nuclear interactions, such as exciton-polaritons, places stringent accuracy requirements on exactly those areas where traditional (semi-)local exchange-correlation functionals fail due to significant self-interaction errors that limit or prevent electronic localization and the associated symmetry-breaking forces on local regions of the ionic lattice/nuclear coordinates112, 116, 144. 
-% Nonlocal functionals featuring a fraction of Fock exchange provide one solution to this problem, generally reducing self-interaction, increasing bandwidth in the electronic DOS and reducing polarizabilities to values closer to experimental estimates118, 119. However, evaluation of the Fock operator within the exact-exchange formalism presents significant computational overhead for static calculations and can render time-dependent studies intractable. Such calculations, within a plane-wave basis (as proposed in this effort) present costs that scale as Ng log(Ng) Ne2, where Ng, the number of plane-wave basis functions can easily approach millions for large system sizes, even if the number of electrons, Ne, is only in the thousands. In partnership with NERSC, PI Prendergast recently succeeded in providing order of magnitude speed-up within the hybrid exact-exchange implementation for the open-source code, PWscf (part of the QuantumESPRESSO suite145) through (1) reorganization of the data layout when switching between the external local DFT self-consistent field loop and an internal non-local Fock matrix evaluation loop and (2) parallelization of the Fock matrix evaluation via band pairing146. These changes have been implemented within PWscf since version 6.1 of QuantumESPRESSO and recent applications include studies of transition metal oxides: variations in electronic DOS upon lithiation147 and significant improvements in transition state energetics for lithium ion transport148. 
-% Furthermore, for large scale plane-wave applications, we will require convergent approximations to the Fock operator with further reductions in computational overhead, such as the Adaptively Compressed Exchange (ACE) approach of Lin149. In this development, the full exchange operator is replaced with a lower rank (Ne vs. Ng) approximant with convergence constraints. This has also been implemented with QuantumESPRESSO (since version 6.1) and another plane-wave implementation in the Discontinuous Galerkin DFT code (DGDFT150) and has been applied in benchmark studies of bulk silicon supercells and to the study of water adsorption on silicene151. ACE contrasts with previous efforts to exploit the locality of exchange interactions through transformations of the occupied Kohn-Sham orbital subspace to a basis of localized functions, such as maximally-localized Wannier functions (as developed by Car et al. 152 in the CP code within QuantumESPRESSO) or via recursive subspace bisection (as developed by Gygi et al. 153 in the Qbox code).
-% The ACE approach for hybrid exact-exchange, combined with the parallel-transport (PT) gauge discussed previously represents a promising avenue (PT-ACE) towards efficient plane-wave basis set RT-TDDFT simulations133 within the Generalized Kohn-Sham (GKS) scheme. It is noted however by Jia et al133, that 1024 silicon atoms, running for ~30 fs employing PT-ACE still requires 1 week to compute on 2048 cores of Edison (at NERSC), although without PT-ACE, it might take a year to do the same. Therefore, there is clearly work still to be done to both improve the strong scaling of plane-wave implementations of hybrid exact-exchange within RT-TDDFT, by adapting promising algorithms like PT-ACE for scalable GPU-based architectures such as within Qbox. To this end, the simplifications and algorithmic improvements outlined above highlight potential opportunities to offload significant computational work while leveraging hardware specific implementations of standard matrix-multiply and fast Fourier transform routines. 
-% (Task 1.1) In view of the above, the NPNEQ team will develop GKS RT-TDDFT functionality featuring range-separated hybrid XC functionals by leveraging  algorithms such as PT-ACE within the scalable Qbox framework.  
+\paragraph{Beyond adiabatic semi-local XC functionals:}  Recent developments within TDDFT have enabled accurate simulations of excitonic~\cite{Ullrich2014b, Refaely-Abramson2015a, Pemmaraju2018b} and long-range charge transfer phenomena~\cite{Kummel2017} in condensed matter systems within the framework of generalized Kohn-Sham (GKS) TDDFT and current-DFT (CDFT)~\cite{Sun2021}.  GKS theory relaxes the requirement within KS theory that the XC potential be a local multiplicative potential of the form $V_{XC}[n](\textbf{r})$ and instead allows non-local potentials $V_{XC}[\rho](\textbf{r},\textbf{r'} )$ that are often explicit functionals of the GKS one-body density matrix $\rho(\textbf{r},\textbf{r'})$~\cite{Baer2018}. Current-DFT  based approaches meanwhile allow for the  encoding of excitonic effects within a time-dependent XC vector potential $A_{XC}[\textbf{j},n](r,t)$, in principle, a functional of both the density $n(\textbf{r})$ and current-density~$\textbf{j}(\textbf{r})$~\cite{Sun2021}. Both approaches are promising for  modeling excitonic effects in  functional materials such a transition metal oxides, chalcogenides and hybrid perovskite systems at a cost that is significantly lower than solving the Bethe-Salpeter Equation. GKS theory based RT-TDDFT in particular extends to nonlinear and non-perturbative light matter interactions as has been demonstrated recently in the case of pump-probe spectroscopy simulated within excitonic condensed matter systems~\cite{Pemmaraju2020}. One of the main development goals for the NPNEQ team over the next 18 months is therefore to implement beyond semi-local DFT XC functionals within $\textsc{INQ}$.  In this endeavor we will draw on our previous experience implementing hybrid functionals within Quantum Espresso (\textbf{PI Prendergast})~\cite{Barnes2017}, SIESTA (\textbf{PI Pemmaraju})~\cite{Pemmaraju2018b} and Octopus (\textbf{PI Andrade})~\cite{Andrade2015} while exploring the GPU adaptation within \textsc{INQ} of promising new algorithms such as the  Adaptively Compressed Exchange (ACE) low-rank representation of the Fock operator due to Lin et al~\cite{Lin2016}.   
 
 
-\paragraph{Non-collinear magnetism and spin-orbit Coupling} Time-dependent DFT for magnetic systems is intrinsically a theory of noncollinear spins wherein the XC magnetic field couples to Pauli two component spinors in the KS Hamiltonian. Furthermore, in the context of modern condensed matter applications such as laser induced magnetization dynamics, carrier dynamics in hybrid perovskite systems and the nonlinear response of topological materials spin-orbit coupling plays a critical role. We will therefore extend the RT-TDDFT time propagation functionality in \textsc{INQ} to the Breit-Pauli Hamiltonian in the two component spinor algebra in order to provide a fully generic description of SO coupling with out projective approximations that depend on ionic positions. In particular we will implement the TDDFT equivalent of the Breit-Pauli Hamiltonian due to Krieger \textit{et al} 
+\paragraph{Non-collinear magnetism and spin-orbit Coupling} Time-dependent DFT for magnetic systems is intrinsically a theory of noncollinear spins wherein the XC magnetic field couples to Pauli two component spinors in the KS Hamiltonian~\cite{Krieger2015}. Furthermore, in the context of modern condensed matter applications such as laser induced magnetization dynamics, carrier dynamics in hybrid perovskite systems and the nonlinear response of topological materials spin-orbit (SO) coupling plays a critical role. We will therefore extend the RT-TDDFT time propagation functionality in \textsc{INQ} to the Breit-Pauli Hamiltonian in the two component spinor algebra~\cite{Breit1932} in order to provide a fully generic description of SO coupling with out projective approximations that depend on ionic positions. In particular we will implement the TDDFT equivalent of the Breit-Pauli Hamiltonian due to Krieger \textit{et al}~\cite{Krieger2015} which enters the time-dependent KS equation
 \begin{equation*}
 i\frac{\partial\Psi_i(\textbf{r},t)}{\partial t} = [ \frac{1}{2} ( -i\nabla + \frac{1}{c}\textbf{A}_{ext} (t) )  + v_s(\textbf{r},t)  + \frac{1}{2c} \overrightarrow{\sigma}.\textbf{B}(\textbf{r},t)  + \frac{1}{4c^2}\overrightarrow{\sigma}.(\nabla v_s(\textbf{r},t) \times -i\nabla )] \Psi_i(\textbf{r},t)
 \end{equation*}
-in which the last term indicates the SO coupling. The generic formulation we propose to implement is well suited to studying the coupled dynamics of charge-spin-orbital-lattice degrees of freedom in the non-perturbative regime.  
- 
-% In time-independent problems the description of spin-orbit coupling is necessary to reproduce accurate atomic energies and level splitting. In thermal equilibrium the spin state and the existence of magnetism is determined by free energy minimization. In time-dependent problems the situation is more complicated, since the only way to change the spin state is by an external magnetic field or internally by spin-orbit coupling. Processes like ultrafast demagnetization can be phenomenologically explained by models that assume kinetics upon free energy models 162 but a practical microscopic model is still absent.
-% Specifically, we will implement spin-orbit coupling (SOC) dynamics, which will significantly improve fidelity of quantum dynamics simulations of functional materials that often comprise transition metals and exhibit complex magnetism. Our implementation of SOC for the planewave basis will not use the projection approximation that virtually all the currently existing (TD)DFT software relies on; as it has been shown to be inappropriate for a description of time dependent quantum mechanical evolution 163.
-% The ubiquitous projection approximation allows to use a natural representation of the spin-orbit interaction by an additive term of the type  with prefactors calculated at the atomic (pseudopotential) level (   is a local projection of the electronic orbital angular momentum). The definition of  depends on ionic positions, which are varying dynamically along with the simulation. Effectively this defines a representation in a curved and changing Hilbert space that is very complex to code163 .
-% Although this picture of SO coupling it is usually justified by the dominance of localized orbitals, in the non-adiabatic context, the simplifications of the projection method carry a heavy complexity cost. Additionally, a time-dependent theory of magnetism is necessarily non-colinear, in order to continuously connect different spin configurations.
-% Time-dependency, non-colinear magnetism and dynamical ions (coupled to both electron-orbital and spin) call for a new approach to the problem of spin in first-principles simulations. Our alternative strategy starts from the the Breit-Pauli Hamiltonian in the two component spinor algebra 164. The Breit-Pauli terms incorporate scalar relativistic corrections to the non-relativistic Hamiltonian, and contain spin-explicit terms describing the interaction between the orbital magnetic moments and spin magnetic moments:
-
-% where  is the gradient (force) of the nuclear potential. This part of the Hamiltonian contains two-body terms that are unacceptable in the Kohn-Sham theory, therefore we will use the gradient of self-consistent effective potential as presented by Krieger et al.
-% This representation of the SO is independent on the labeling of ions and not-explicitly dependent on the ion positions (only through the potential); it doesn’t rely on a local projection of the angular momentum and it is more suitable for a time dependent treatment with co-evolving ions. In the same way that a quantum ion-electron interaction leads to advanced picture of electron-phonon coupling (a two-temperature system),128 this development will lead to a fuller picture to guide advances of effective models of spin-lattice-electron dynamics166. This is important, in particular, to handle time evolution of Weyl points driven by lattice motion or circularly polarized light, addressing the needs for modeling experimental efforts described in other sections. 
+where the last term indicates the SO coupling. The generic formulation we propose to implement is well suited to studying the coupled dynamics of charge-spin-orbital-lattice degrees of freedom in the non-perturbative regime.  
+  
 
 \paragraph{Spiral boundary conditions:}
-Understanding the role of spin-fluctuations both thermal and light driven, is a topic of increasing interest in materials science. With advances in the ability to experimentally probe magnon spectra using inelastic X-ray spectroscopy, the potential for nonlinear manipulation on spin excitations in the THz regime and the emergence of anti-ferromagnetic spintronics, there is a growing demand for ab initio theoretical simulations in this area. Describing magnon excitations at finite wave-vectors requires either the use of large supercells or alternatively twisted boundary conditions with the generalized Bloch framework. The latter approach is particularly attractive for time-domain non-perturbative simulations of magnons in periodic systems as has been recently demonstrated. Within the group of PI Lindenberg at SLAC, there is on going and planned experimental activity investigating spin dynamics in layered antiferromagnets as outlined in the next section. In order to make direct contact with these experimental studies we will implement within \textsc{INQ} the time-dependent version of the general Bloch theorem of Sandratskii recently outlined by N. Tancogne-Dejean et al. 
+Understanding the role of spin-fluctuations both thermal and light driven, is a topic of increasing interest in materials science. With advances in the ability to experimentally probe magnon spectra using inelastic X-ray spectroscopy~\cite{Haverkort2010}, the potential for nonlinear manipulation of spin excitations in the THz regime~\cite{Kampfrath2011} and the emergence of anti-ferromagnetic spintronics~\cite{Baltz2018}, there is a growing demand for \textit{ab initio} theoretical simulations in this area. Describing magnon excitations at finite wave-vectors requires either the use of large supercells or alternatively twisted boundary conditions with the generalized Bloch framework. The latter approach is particularly attractive for time-domain non-perturbative simulations of magnons in periodic systems as has been recently demonstrated~\cite{Tancogne-Dejean2020}. Within the group of PI Lindenberg at SLAC, there is on going and planned experimental activity investigating spin dynamics in layered antiferromagnets as outlined in the next section. In order to make direct contact with these experimental studies we will implement within \textsc{INQ} the time-dependent version of the general Bloch theorem of Sandratskii~\cite{Sandratskii1986} recently outlined by N. Tancogne-Dejean et al~\cite{Tancogne-Dejean2020}. 
 
 \paragraph{Beyond Ehrenfest dynamics}
 
@@ -381,6 +366,14 @@ The appropriate parameterization of tight-binding models suitable for describing
 With these tools, we will study how orbital localization arises from decoherence, finite-temperature effects, and scattering processes.  
 
 \subsection{Science Applications}
+\begin{figure}[ht]
+	\centering\includegraphics[width=0.8\linewidth]{figures/NiPS3}
+	\caption{
+		(left)  Measured THz electric field waveform emitted from \(\mathrm{NiPS_3}\) antiferromagnetic sample under femtosecond \(400~\mathrm{nm}\) excitation.
+		(right) Peak THz emission amplitude as a function of temperature, showing strong enhancement at the Neel temperature (\(155~\mathrm{K}\)), showing direct sensitivity to time-dependent magnetization.
+	}
+	\label{fig:NiPS3}
+\end{figure}
 
 Several ongoing projects involving close collaboration between experimental efforts and theory from this team are in progress.
 
@@ -406,15 +399,6 @@ We find there are two contributions to the measured fields, involving a current 
 Further spectral analysis of the emitted fields may allow us to extract information about particular magnons associated with the light-induced response.
 This work opens up new possibilities for controlling the properties of antiferromagnetic materials on ultrafast time-scales. 
 Ongoing work additionally involves upcoming experiments at the SLAC National Accelerator Laboratory Ultrafast Electron Diffraction facility where we will in parallel investigate the correlated structural dynamics under similar photoexcitation conditions.
-
-\begin{figure}[ht]
-	\centering\includegraphics[width=0.8\linewidth]{figures/NiPS3}
-	\caption{
-		(left)  Measured THz electric field waveform emitted from \(\mathrm{NiPS_3}\) antiferromagnetic sample under femtosecond \(400~\mathrm{nm}\) excitation.
-		(right) Peak THz emission amplitude as a function of temperature, showing strong enhancement at the Neel temperature (\(155~\mathrm{K}\)), showing direct sensitivity to time-dependent magnetization.
-	}
-	\label{fig:NiPS3}
-\end{figure}
 
 In conjunction with this experimental work, {\bf Tan} and {\bf Pemmaraju} are investigating a number of theoretical approaches to this problem.
 First, static, first-principles density functional theory are used to solve for the electronic structure, phononic properties, and electron-phonon interactions of the \(\mathrm{NiPS_3}\) materials system. 
